--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.ApiUploadImage"
             android:usesCleartextTraffic="true">
+        <activity android:name=".PayActivity">
+        </activity>
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -25,7 +27,6 @@
         <activity android:name=".upload.CartActivity">
         </activity>
         <activity android:name=".upload.UploadActivity">
-
         </activity>
         <activity android:name=".MainActivity">
         </activity>
