--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.ApiUploadImage"
             android:usesCleartextTraffic="true">
+        <activity android:name=".LoadingDialog">
+        </activity>
         <activity android:name=".PayActivity">
         </activity>
         <activity android:name=".StartActivity">
