--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.bintang.apiuploadimage">
+          package="com.example.hashtag">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
@@ -29,8 +29,6 @@
         <activity android:name=".upload.CartActivity">
         </activity>
         <activity android:name=".upload.UploadActivity">
-        </activity>
-        <activity android:name=".MainActivity">
         </activity>
     </application>
 
