--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.ApiUploadImage"
+            android:theme="@style/Theme.hashtag"
             android:usesCleartextTraffic="true">
-        <activity android:name=".LoadingDialog">
+        <activity android:name=".VideoActivity">
+        </activity>
+        <activity android:name=".MenuActivity">
         </activity>
         <activity android:name=".PayActivity">
         </activity>
