--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.hashtag"
             android:usesCleartextTraffic="true">
+        <activity android:name=".FeedActivity">
+        </activity>
         <activity android:name=".VideoActivity">
         </activity>
         <activity android:name=".MenuActivity">
