add:login, register view

--- a/android-client/app/build.gradle
+++ b/android-client/app/build.gradle
@@ -58,5 +58,5 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
 // CameraX View class
     implementation "androidx.camera:camera-view:1.0.0-alpha19"
-
+    implementation "com.kakao.sdk:v2-user:2.0.1"
 }
