--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.hashtag">
-
+    <!-- 인터넷 사용 권한 설정-->
+<!--    <uses-permission android:name="android.permission.INTERNET" />-->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -15,6 +16,12 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.hashtag"
             android:usesCleartextTraffic="true">
+        <activity android:name=".Login2Activity">
+        </activity>
+        <activity android:name=".RegisterActivity">
+        </activity>
+        <activity android:name=".LoginActivity">
+        </activity>
         <activity android:name=".QrActivity">
         </activity>
         <activity android:name=".Pay2Activity">
