--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
+            android:name=".GlobalApplication"
             android:allowBackup="true"
             android:icon="@mipmap/app_icon2"
             android:label="@string/app_name"
@@ -17,6 +18,8 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.hashtag"
             android:usesCleartextTraffic="true">
+        <activity android:name=".NaviActivity">
+        </activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -47,6 +50,18 @@
         <activity android:name=".upload.CartActivity">
         </activity>
         <activity android:name=".upload.UploadActivity">
+        </activity>
+        <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data
+                        android:host="oauth"
+                        android:scheme="kakao145e4cd4a3c29e4ad6692c4159193440"/>
+            </intent-filter>
         </activity>
     </application>
 
